2015-05-20 Loic Valery <lvalery@cern.ch>
        * TtHFit.C: fix mem leaks, remove unused function (SmoothSystematics), change some histograms names to avoid warning messages
        * TtHFit.h: propagates function suppression
        * TtHFit.C: adding an option in the config file to avoid dumping syst control histograms

2015-05-14 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit.C: pre and post fit yield tables added
        * TtHFit.C, runSig.C: significance calculation added
        * TtHFit.C: limit and significance output stored in proper file sin proper directories
        * TthPlot.C: plotting style improved (no numbers in the legend, ability to merge small samples...)
        * TtHFit.C, Region.C: root file outptuts added for pre- and post-fit plots (summary as well)
        * util/myFit.C: options added for the parser
        * PlotLimits.C: macro added to plot limits (still not interfaced with the main code)
        * Versioning: 1.3
        
2015-04-30 Michele Pinamonti <michele.pinamonti@gmail.com>
        * TtHFit.C, Region.C: modified to better handle post-fit plots
        * TtHFit.C: post-fit summary plot added
        * util/myFit.C, TtHFit.C: config parser stuff moved to TtHFit.C
        * Many other small changes and cosmetic fixes to code and plots
        * Versioning: 1.2
        
2015-04-09 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Makefile: changed in order to accept as argument the main code to use (any .C inside utils/)
        * Configuration file system added
        * util/myFit.config: added
        * util/myFit.C: changed in order to read util/myFit.config
        * Region.C: Option added to have different constrains on Overall and Histo systs (at the moment both have interpCode=4, which seems to perform better - to check)
        * Versioning: 1.1

2015-03-13 Michele Pinamonti <michele.pinamonti@gmail.com>
        * Makefile: added